[project]
name = "SimulationIntelligenceAndLearningForAutonomousSystems"
version = "0.1.0"
description = "Code implementations for the Simulation Intelligence and Learning for Autonomous Systems (SILAS) course exam, University of Trieste. Includes projects on composite neural networks and Proximal Policy Optimization (PPO)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[classic-control]>=1.1.1",
    "imageio>=2.37.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "torch>=2.7.1",
    "setuptools<81",  # Pinned to avoid pkg_resources warning
]

[tool.uv]
python = "3.12"
